--- a/SourceCode/PantryFrontend/pantry-app/src/app.html
+++ b/SourceCode/PantryFrontend/pantry-app/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<link
-			href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+			href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
 			rel="stylesheet"
 		/>
 		%sveltekit.head%
